# tmux-tui

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  flake.nix  justfile  mkdocs.yml  result  rust-toolchain.toml  rustfmt.toml  tmux-tui-popup.sh
.github/workflows/: ci.yml  darwin-release.yml  deploy-docs.yml  linux-release.yml  release.yml
docs/: api-reference.md  index.md  usage.md
nix/: api-docs.nix  apps.nix  checks.nix  crane.nix  hm-module.nix  nixos-module.nix  packages.nix  release.nix  toolchain.nix
scripts/release/: check-version-consistency  extract-notes  version
src/: app.rs  geometry.rs  main.rs  menu.rs  tmux.rs  ui.rs
